[gd_scene load_steps=13 format=3 uid="uid://cvndxaaficoxb"]

[ext_resource type="Script" uid="uid://cxp1iigpmo74q" path="res://scripts/weapons/rifle_muzzle_flash.gd" id="1_ninkg"]
[ext_resource type="Texture2D" uid="uid://bfoojgwwd5vab" path="res://assets/textures/FX/MuzzleFlash_Flash_Alba.dds" id="2_3ruos"]
[ext_resource type="Texture2D" uid="uid://cwuqmjoh5pild" path="res://assets/textures/FX/MuzzleFlash_Flash_Em.dds" id="3_vobod"]
[ext_resource type="Texture2D" uid="uid://dsibw0df5hm25" path="res://assets/textures/FX/MuzzleFlashTrail_Alba.dds" id="4_3n4dt"]

[sub_resource type="Curve" id="Curve_jhsvr"]
_limits = [0.0, 25.0, 0.0, 1.0]
_data = [Vector2(0, 25), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_3eg7k"]
curve = SubResource("Curve_jhsvr")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_p02vn"]
angle_min = -720.0
angle_max = 720.0
gravity = Vector3(0, 0, 0)
scale_min = 0.7
emission_curve = SubResource("CurveTexture_3eg7k")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h0bah"]
transparency = 1
albedo_texture = ExtResource("2_3ruos")
emission_enabled = true
emission_energy_multiplier = 3.29
emission_texture = ExtResource("3_vobod")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_4s54f"]
material = SubResource("StandardMaterial3D_h0bah")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oem1h"]
emission_shape_scale = Vector3(0.05, 0.05, 0.05)
angle_min = 1.07288e-05
angle_max = 1.07288e-05
gravity = Vector3(0, 0, -10)
scale_min = 0.5
turbulence_enabled = true
turbulence_noise_strength = 0.0
turbulence_noise_scale = 0.0
turbulence_noise_speed_random = 0.42
turbulence_influence_min = 0.0
turbulence_influence_max = 0.012

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_flnvi"]
transparency = 1
albedo_texture = ExtResource("4_3n4dt")
emission_enabled = true
emission_energy_multiplier = 1.73
emission_texture = ExtResource("4_3n4dt")

[sub_resource type="QuadMesh" id="QuadMesh_smaua"]
material = SubResource("StandardMaterial3D_flnvi")
size = Vector2(0.3, 0.6)
orientation = 1

[node name="RifleMuzzleFlash" type="Node3D"]
script = ExtResource("1_ninkg")

[node name="MuzzleFlash" type="GPUParticles3D" parent="."]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0, 0, 0)
emitting = false
amount = 2
lifetime = 0.1
one_shot = true
speed_scale = 25.0
local_coords = true
process_material = SubResource("ParticleProcessMaterial_p02vn")
draw_pass_1 = SubResource("QuadMesh_4s54f")

[node name="MuzzleTrail" type="GPUParticles3D" parent="."]
emitting = false
amount = 1
lifetime = 0.06
one_shot = true
speed_scale = 20.0
randomness = 0.5
local_coords = true
trail_lifetime = 1.0
process_material = SubResource("ParticleProcessMaterial_oem1h")
draw_pass_1 = SubResource("QuadMesh_smaua")

[node name="MuzzleLight" type="SpotLight3D" parent="."]
visible = false
light_energy = 0.5
spot_range = 10.0
spot_attenuation = 1.43
spot_angle = 115.78

[node name="LightTimer" type="Timer" parent="."]

[connection signal="timeout" from="LightTimer" to="." method="_on_light_timer_timeout"]
